--- a/RemoteController/html/index.html
+++ b/RemoteController/html/index.html
@@ -19,25 +19,43 @@
   </div>
 
   <div>
-    <p id="turn"></p>
-    <p id="forward"></p>
+    Turn: <p id="turn"></p>
+    Forward: <p id="forward"></p>
   </div>
 
   <script type="text/javascript">
-    var turnJoy = new JoyStick('turnJoy');
-    var forwardJoy = new JoyStick('forwardJoy');
+    let endPoint = "wss://sites.google.com/view/juneer2021fall/websocket/?type=controller";
+
+    let turnJoy = new JoyStick('turnJoy');
+    let forwardJoy = new JoyStick('forwardJoy');
 
     let turnOut = document.getElementById("turn");
     let forwardOut = document.getElementById("forward");
-    setInterval(function() {
-      turnOut.innerHTML = "Turn: " + turnJoy.GetPosX();
-    }, 50);
-    setInterval(function() {
-      forwardOut.innerHTML = "Forward: " + forwardJoy.GetPosY();
-    }, 50);
 
     // Do websocket stuff
     // NightCrystal <--> NPM Websocket <--> Controller
+    let ws = new WebSocket(endPoint)
+
+    ws.onopen = () => {
+      console.log('open connection')
+    }
+
+    ws.onclose = () => {
+      console.log('close connection')
+    }
+
+    setInterval(function() {
+      if (turnOut.innerHTML != turnJoy.GetX()) {
+        ws.send('{"action":"updateJoyStick", "stick":"turn", "data":' + turnJoy.GetX() + '}');
+      }
+      turnOut.innerHTML = turnJoy.GetX();
+    }, 50);
+    setInterval(function() {
+      if (forwardOut.innerHTML != forwardJoy.GetY()) {
+        ws.send('{"action":"updateJoyStick", "stick":"forward", "data":' + forwardJoy.GetY() + '}');
+      }
+      forwardOut.innerHTML = forwardJoy.GetY();
+    }, 50);
   </script>
 
 </body>
